# object_identifier

object_identifier/: .gitignore  CMakeLists.txt  package.xml
object_identifier/config/params/: debug_object_map.yaml
object_identifier/config/rviz/: object_ref.rviz  object_tracking_test.rviz
object_identifier/include/debug_object_map_publisher/: debug_object_map_publisher.h
object_identifier/include/identify_object_test/: identify_object_test.h
object_identifier/include/object_identifier/: image.h  images.h  object_identifier.h
object_identifier/launch/: debug_object_map_publisher.launch  identify_object_test.launch  object_identifier.launch  object_identifier_test.launch
object_identifier/src/: debug_object_map_publisher.cpp  identify_object_test.cpp  object_identifier.cpp  object_identifier_node.cpp
object_identifier_msgs/: CMakeLists.txt  package.xml
object_identifier_msgs/msg/: ObjectPositionWithID.msg  ObjectPositionsWithID.msg
