<?xml version="1.0"?>
<package format="2">
  <name>object_identifier</name>
  <version>0.0.0</version>
  <description>The object_identifier package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend> -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>object_detector_msgs</depend>
  <depend>object_identifier_msgs</depend>
  <!-- <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend> -->

  <export>
  </export>
</package>
